# l9-assurance

./: .gitignore  .npmrc  .pre-commit-config.yaml  AGENTS.md  ALIGNMENT_REPORT.md  ARCHITECTURE.md  CHANGELOG.md  CHANGE_SUMMARY.md  CONTRIBUTING.md  CONVERGENCE_REPORT.yaml  DECISION_LOG.md  DELTA_REPORT.md  FINAL_TREE.md  IMPROVEMENT_REPORT.md  LICENSE  MANIFEST.md  PROVENANCE_MAP.yaml  README.md  REGRESSION_GUARD.md  REWRITE_EXECUTION_SPEC.md  RUNBOOK.md  SECURITY.md  SPECIFICATION.md  TRACEABILITY_MAP.yaml  UNKNOWN_REGISTER.md  VALIDATION.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json  tsconfig.typecheck.json  validation-benchmark.json  validation-report.json
.github/workflows/: ci.yml
.l9/: L9_META.jsonl  repo-spec.yaml
bindings/: manifest.json
bindings/python/: l9_assurance_types.py
bindings/typescript/: index.ts
controls/ci/: mandatory-findings.yaml
schemas/: registry.json
scripts/: benchmark.mjs  benchmark.py  build.mjs  ci.mjs  ci.py  clean.mjs  format.mjs  generate-bindings.mjs  generate_inventory.py  generate_l9_meta.py  lint.mjs  repository_files.py  run-tests.mjs  sync-protocol-bundle.mjs  sync_protocol_bundle.py  validate-boundaries.mjs  validate-build-evidence.mjs  validate-cli-distribution.mjs  validate-completeness.mjs  validate-fixtures.mjs  validate-registries.mjs  validate-schemas.mjs  validate_boundaries.py  validate_completeness.py  validate_fixtures.py  validate_l9_alignment.py  validate_registries.py  validate_schemas.py  verify-replay.mjs  verify_replay.py
tests/: conftest.py
(+173 files in other folders)
